--- a/hosting/test/dedicated.cfg
+++ b/hosting/test/dedicated.cfg
@@ -1,19 +1,17 @@
-sets _ADMIN "<%= ADMIN_NAME %>"
-sets _EMAIL "<%= ADMIN_EMAIL %>"
+sets _ADMIN "a"
+sets _EMAIL "b"
 sets _IRC ""
 sets _WEBSITE ""
 sets _LOCATION ""
-set sv_hostname "<%= SERVER_NAME %>"
+set sv_hostname "c"
 set net_ip "0.0.0.0"
-set net_port "<%= SERVER_PORT %>"
-rcon_password "<%= SERVER_RCON %>"
+set net_port "d"
+rcon_password ""
 set dedicated "2"
 set sv_pure "1"
-set sv_maxplayers "<%= maxplayers %>"
-<% #TODO %>
+set sv_maxplayers ""
 sv_maprotation "gametype dm map mp_carentan gametype dm map mp_toujane gametype tdm map mp_brecourt gametype tdm map mp_matmata"
 map_rotate
-<% # korisnik smije editirati: %>
 set sv_minping "0"
 set sv_maxping "0"
 set sv_maxrate "0"
